--- a/homebrew.html
+++ b/homebrew.html
@@ -15,6 +15,6 @@ without the need for any extra hardware, modifications to your console or danger
 <h4><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">Free Hard Drive Boot (FHDB)</a></h4>
 Free Harddisk Drive Boot (FHDB) is basically FMCB that gets installed onto the PlayStation 2 console's HDD unit. It does everything like FMCB does, but is meant to be used with the Sony HDDOSD (Browser update v2.00).
 
-<h4><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System%20/%20SAS/introduction.html">Save Application System</a></h4>
+<h4><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System/SAS/introduction.html">Save Application System</a></h4>
 A new App-System for PS2, which integrates more seamlessly and easier for the end-user, into the PS2's setup and the general Homebrew-Ecosystem.
 </p>
