Update Links & Sources

--- a/links_and_sources.html
+++ b/links_and_sources.html
@@ -3,7 +3,7 @@ layout: links_and_sources
 title: Links & Sources
 ---
 
-***
+----------
 <p>
 <h3><i class="fa fa-link"></i> Useful Links</h3>
 <h4><a href="https://www.psx-place.com">PSX-Place</a></h4>
@@ -13,9 +13,9 @@ PSX-Place.com is dedicated to bringing you the latest Homebrew, Hacking, Exploit
 <h4><a href="https://github.com/ps2homebrew">PS2 Homebrew Projects GitHub</a></h4>
 A collection of free tools for the Sony PlayStation 2® videogame system and similar hardware.
 
-***
+----------
 <p>
-<h3><i class="fa fa-mug-hot"></i>Homebrew Apps</h3>
+<h3><i class="fa fa-mug-saucer"></i>Homebrew Apps</h3>
 <h4><a href="https://github.com/ps2homebrew/Open-PS2-Loader">Open PS2 Loader (OPL)</a></h4>
 Open PS2 Loader (OPL) is a 100% Open source game and application loader for the PS2 and PS3 units. It supports three categories of devices: USB mass storage devices, SMB shares and the PlayStation 2 HDD unit. 
 USB devices and SMB shares support USBExtreme and *.ISO formats while PS2 HDD supports HDLoader format, all devices also support ZSO format (compressed ISO). It's now the most compatible homebrew loader.
