Add new post tags, improve readability of the site, add new fonts, add issue templates and general enhancements (#18)
* Update 2024-08-19-sas-warnings-megapost.md

* SAS Megapost asset change (#13)

* Delete _posts/PS2-App-System/SAS/2024-08-19-sas-warnings-megapost/assets directory

* Add files via upload

* Fix minor inconsistencies

* Add new tags, rename 'Homebrew' tab to 'Links & Sources' and update SAS-Megapost with fixes and new tags (#14)

* Koraxial patch 1 (#1)

* Update 2024-08-19-sas-warnings-megapost.md

* Update and rename homebrew.html to links_and_sources.html

* Update and rename homebrew.html to links_and_sources.html

* Update links_and_sources.html

Rename page and add more useful links

* Add wip and fact check tags (#2)

* Update pagination-item.html

* Update post-header.html

* Update 2024-08-19-sas-warnings-megapost.md

* Update new tag icons (#15)

* Update pagination-item.html

* Update post-header.html

* Improve readability of SAS-Megapost

* Fix 'Links & Sources' not showing in Header

* Cleanups (#16)

* Improve Note in SAS-Megapost

* Update Links & Sources

* Update links_and_sources.html (#17)

* Update head.html

* Update yat.scss

* Update issue templates

* Create bug-report.yml

* Create post-ideas.yml

* Create feature-suggestion.yml

--- a/links_and_sources.html
+++ b/links_and_sources.html
@@ -1,20 +1,35 @@
 ---
-layout: homebrew
-title: Homebrew
+layout: links_and_sources
+title: Links & Sources
 ---
 
+<hr>
 <p>
-<h4><a href="https://github.com/ps2homebrew/Open-PS2-Loader">Open PS2 Loader (OPL)</a></h4>
+<h3><i class="fa fa-link"></i> Useful Links</h3>
+<h4><a href="https://www.psx-place.com">- PSX-Place</a></h4>
+PSX-Place.com is dedicated to bringing you the latest Homebrew, Hacking, Exploits, CFW, Jailbreak & PlayStation Scene News to your fingertips.
+
+<h4><a href="https://github.com/ps2homebrew">- PS2 Homebrew Projects GitHub</a></h4>
+A collection of free tools for the Sony PlayStation 2® videogame system and similar hardware.
+</br>
+</p>
+
+<hr>
+<p>
+<h3><i class="fa  fa-code"></i> Homebrew Apps</h3>
+<h4><a href="https://github.com/ps2homebrew/Open-PS2-Loader">- Open PS2 Loader (OPL)</a></h4>
 Open PS2 Loader (OPL) is a 100% Open source game and application loader for the PS2 and PS3 units. It supports three categories of devices: USB mass storage devices, SMB shares and the PlayStation 2 HDD unit. 
 USB devices and SMB shares support USBExtreme and *.ISO formats while PS2 HDD supports HDLoader format, all devices also support ZSO format (compressed ISO). It's now the most compatible homebrew loader.
 
-<h4><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">Free Memory Card Boot (FMCB)</a></h4>
+<h4><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">- Free Memory Card Boot (FMCB)</a></h4>
 Free Memory Card Boot (FMCB) is a piece of homebrew software, which is designed to setup your PlayStation 2 console and provides you with means of launching homebrew software, 
 without the need for any extra hardware, modifications to your console or dangerous tricks like the legendary swap trick.
 
-<h4><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">Free Hard Drive Boot (FHDB)</a></h4>
+<h4><a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">- Free Hard Drive Boot (FHDB)</a></h4>
 Free Harddisk Drive Boot (FHDB) is basically FMCB that gets installed onto the PlayStation 2 console's HDD unit. It does everything like FMCB does, but is meant to be used with the Sony HDDOSD (Browser update v2.00).
 
-<h4><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System/SAS/introduction.html">Save Application System</a></h4>
+<h4><a href="https://ps2wiki.github.io/Homebrew/PS2-App-System/SAS/introduction.html">- Save Application System (SAS)</a></h4>
 A new App-System for PS2, which integrates more seamlessly and easier for the end-user, into the PS2's setup and the general Homebrew-Ecosystem.
+</br>
 </p>
+
