Update 'Get Started'

--- a/get_started.html
+++ b/get_started.html
@@ -2,7 +2,7 @@
 layout: get_started
 title: Get Started
 ---
-```WARNING: This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information as a relevant source till this message disappers```
+```WARNING: This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information as a relevant source till this message disappears.```
 <p>
     <h3>> Basics</h3>
     <h4><a href=" ">- What is Homebrew?</a></h4>
