Update 'Get Started'

--- a/get_started.html
+++ b/get_started.html
@@ -3,9 +3,8 @@ layout: get_started
 title: Get Started
 ---
 
-<div class="alert">
-  <span class="clbtn" onclick="this.parentElement.style.display='none';">&times;</span> 
-  <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information as a relevant source till this message disappears.
+<div class="warning">
+  <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
 
 <p>
@@ -23,8 +22,8 @@ title: Get Started
 
     <h4><a href=" ">- Is Jailbreaking my device legal?</a></h4>
     Jailbreaking is legal in many countries, but it's legality can vary by region, so it's recommended you check with your local laws before proceeding. 
-    All methods of jailbreaking which are provided on [this website](https://ps2wiki.github.io) are considered legal under The U.S. Laws. 
-    If you find any material which might violate the law, please raise an issue [here](https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+)
+    All methods of jailbreaking which are provided on <a href="https://ps2wiki.github.io">this website</a> are considered legal under The U.S. Laws. 
+    If you find any material which might violate the law, please raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>
 </p>
 
 <p>
@@ -33,7 +32,7 @@ title: Get Started
     The PS2 has two main types: 
     1. The Phat (fat) model: The original, launch model
     2. The Slim model: Released later and is smaller and more compact
-    
+    <br>
     <div class="container">
         <img style="border:2px solid #16537e" width="300" height="300" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a">
     </div><br>
