--- a/get_started.html
+++ b/get_started.html
@@ -25,7 +25,7 @@ title: Get Started
     All methods of jailbreaking which are provided on <a href="https://ps2wiki.github.io">this website</a> are considered legal under The U.S. Laws. 
     If you find any material which might violate the law, please raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>
 </p>
-
+<hr>
 <p>
     <h3>> Getting started with PS2 Modding</h3>
     <h4><a href=" ">- Know your model</a></h4>
@@ -35,6 +35,6 @@ title: Get Started
   
   <br><div class="container">
         <img style="border:2px solid #16537e" width="300" height="300" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a">
-    </div><br>
+    </div>
     <h5 align="center">Left: PS2 Phat   Right: PS2 Slim</h5>
 </p>
