--- a/get_started.html
+++ b/get_started.html
@@ -30,10 +30,12 @@ title: Get Started
     <h3>> Getting started with PS2 Modding</h3>
     <h4><a href=" ">- Know your model</a></h4>
     The PS2 has two main types:   
-      1. The Phat (fat) model: The original, launch model  
-    2. The Slim model: Released later and is smaller and more compact  
+      <p>1. The Phat (fat) model: The original, launch model</p>
+      <p>2. The Slim model: Released later and is smaller and more compact</p>  
+
+<br>
   
-  <br><div class="container">
+    <div class="container">
         <img style="border:2px solid #16537e" width="300" height="300" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a">
     </div>
     <p align="center">Left: PS2 Phat   Right: PS2 Slim</p>
