--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ Welcome to The PS2 Homebrew Wiki! </br>
 This website is made by members and developers of the PS2 Homebrew Scene in an attempt to make it easier for people to mod their PS2s and learn about stuff regarding the console. 
 
 <h4>Disclaimer</h4>
- <div class="alert">
+ <div class="warning">
   <span class="closebtn" onclick="this.parentElement.style.display='none';"></span>
   This site isn't affiliated and/or endorsed by Sony in any capacity. </br>
   This site and it's members <b>DO NOT</b> endorse piracy and any guides or information on the website assumes that the individual engaging is using their own legally obtained media only.
