--- a/get_started.html
+++ b/get_started.html
@@ -30,8 +30,8 @@ title: Get Started
     <h3>> Getting started with PS2 Modding</h3>
     <h4><a href=" ">- Know your model</a></h4>
     The PS2 has two main types:   
-      <p>1. The Phat (fat) model: The original, launch model</p>  
-      <p>2. The Slim model: Released later and is smaller and more compact</p>  
+      * 1. The Phat (fat) model: The original, launch model
+      * 2. The Slim model: Released later and is smaller and more compact  
 
 
 <br>
