--- a/get_started.html
+++ b/get_started.html
@@ -29,9 +29,11 @@ title: Get Started
 <p>
     <h3>> Getting started with PS2 Modding</h3>
     <h4><a href=" ">- Know your model</a></h4>
-    The PS2 has two main types:   
-      * 1. The Phat (fat) model: The original, launch model
-      * 2. The Slim model: Released later and is smaller and more compact  
+    The PS2 has two main types:  
+  <ol>
+    <li>The Phat (fat) model: The original, launch model</li>
+    <li>The Slim model: Released later and is smaller and more compact</li> 
+  </ol>
 
 
 <br>
