--- a/get_started.html
+++ b/get_started.html
@@ -7,38 +7,41 @@ title: Get Started
   <strong>WARNING:</strong> This page is still being worked on. Information might be missing or lacking important context. DO NOT cite this page or any information here as a relevant source till this message disappears.
 </div>
 
+<ol>
 <p>
-<h3>> Basics</h3>
-<h4><a href=" ">- What is Homebrew?</a></h4>
+<li><h3>> Basics</h3></li>
+<ul><li><h4><a href=" ">- What is Homebrew?</a></h4></li>
 Homebrew refers to any custom or homemade software or hardware created by hobbyists, enthusiasts, or developers without official support or funding from the Original Equipment Manufacturers (OEMs).
 This term is often used in the context of homebrew games, homebrew software, or homebrew firmware for consoles (like PS2), where developers create their own programs or modify existing systems for personal use.
 
-<h4><a href=" ">- What is Jailbreaking?</a></h4>
+<li><h4><a href=" ">- What is Jailbreaking?</a></h4></li>
 Jailbreaking refers to the process of removing restrictions imposed by the manufacturer on a device to gain full control over its operating system and allow the installation of third-party applications (Homebrew) or modifications that aren't officially authorized.
 
-<h4><a href=" ">- Why should I Jailbreak my device?</a></h4>
+<li><h4><a href=" ">- Why should I Jailbreak my device?</a></h4></li>
 Jailbreaking allows you to customize the appearance of your device with new themes, custom icons and widgets.
 It also allows you to install custom software and gain access to hidden features that are not available to you otherwise (Eg: Region-free disc playback).
 
-<h4><a href=" ">- Is Jailbreaking my device legal?</a></h4>
+<li><h4><a href=" ">- Is Jailbreaking my device legal?</a></h4></li>
 Jailbreaking is legal in many countries, but it's legality can vary by region, so it's recommended you check with your local laws before proceeding. 
 All methods of jailbreaking which are provided on <a href="https://ps2wiki.github.io">this website</a> are considered legal under The U.S. Laws. 
 If you find any material which might violate the law, please raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>
-</p>
+</ul></p>
 <hr>
 <p>
-  <h3>> Getting started with PS2 Modding</h3>
-  <h4><a href=" ">- Know your model</a></h4>
-  The PS2 has two main types:  
-  <ol>
-    <li>  The Phat (fat) model: The original, launch model</li>
-    <li>  The Slim model: Released later and is smaller and more compact</li> 
-  </ol>
-
-
+<ul>
+<li><h3>> Getting started with PS2 Modding</h3></li>
+<h4><a href=" ">- Know your model</a></h4>
+The PS2 has two main types:  
+<ol>
+  <li>  The Phat (fat) model: The original, launch model</li>
+  <li>  The Slim model: Released later and is smaller and more compact</li> 
+</ol>
 <br>
 <div class="container">
     <img style="border:2px solid #16537e" width="400" height="300" src="https://s.yimg.com/ny/api/res/1.2/u6_1ukNEFKoR20ynAAqN8A--/YXBwaWQ9aGlnaGxhbmRlcjt3PTY0MDtoPTM2MA--/https://media.zenfs.com/en/playstation_lifestyle_666/e3c727043f7cfde121c27f3df089fa6a">
 </div>
 <p align="center">Left: PS2 Phat | Right: PS2 Slim</p>
 </p>
+
+</ul>
+</ol>
