--- a/get_started.html
+++ b/get_started.html
@@ -9,7 +9,7 @@ title: Get Started
 
 <ol>
 <p>
-<h3><li>Basics</li></h3>
+<h3>><li>Basics</li></h3>
 <ul><h4><a href=" "><li>What is Homebrew?</li></a></h4>
 Homebrew refers to any custom or homemade software or hardware created by hobbyists, enthusiasts, or developers without official support or funding from the Original Equipment Manufacturers (OEMs).
 This term is often used in the context of homebrew games, homebrew software, or homebrew firmware for consoles (like PS2), where developers create their own programs or modify existing systems for personal use.
@@ -28,7 +28,7 @@ If you find any material which might violate the law, please raise an issue <a h
 </ul></p>
 <hr>
 <p>
-<h3><li> Getting started with PS2 Modding</li></h3>
+<h3>><li>Getting started with PS2 Modding</li></h3>
 <ul><h4><a href=" "><li>Know your model</li></a></h4>
 The PS2 has two main types:  
 <ol>
