--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ This website is made by members and developers of the PS2 Homebrew Scene in an a
 <h4>Disclaimer</h4>
  <div class="warning">
   <span class="closebtn" onclick="this.parentElement.style.display='none';"></span>
-  This site isn't affiliated and/or endorsed by Sony in any capacity. </br>
+  This site isn't affiliated to and/or endorsed by Sony in any capacity. </br>
   This site and it's members <b>DO NOT</b> endorse piracy and any guides or information on the website assumes that the individual engaging is using their own legally obtained media only.
 </div> 
 
