--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@ banner:
   image: "/assets/images/wp2328295.jpg"
   opacity: 0.618
   background: "#000"
-  height: "100vh"
-  min_height: "75vh"
+  height: "50vh"
+  min_height: "50vh"
   heading_style: "font-size: 5em; font-weight: bold; text-decoration: underline"
   subheading_style: "color: 96f4fe"
 top: 1
 sidebar: []
 ---
+<h2>Posts: </h2>
