--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@ banner:
 top: 1
 sidebar: []
 ---
-<h1 style="font-size: 1.5em">➤<u>Latest Posts:</u></h1>
+<h1 style="font-size: 20px">➤<u>Latest Posts:</u></h1>
