--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ banner:
   height: "65vh"
   min_height: "65vh"
   heading_style: "font-size: 3.5em; font-weight: bold; text-decoration: underline"
-  subheading_style: "color: 96f4fe"
+  subheading_style: "color: #99b6b9"
 top: 1
 sidebar: []
 ---
-<h1 style="font-size: 20px">➤<u>Latest Posts:</u></h1>
+<h1 style="font-size: 50px">➤<u>Latest Posts:</u></h1>
