--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ banner:
   height: "65vh"
   min_height: "65vh"
   heading_style: "font-size: 3.5em; font-weight: bold; text-decoration: underline"
-  subheading_style: "color: #99b6b9"
+  subheading_style: "font-size: 1.5em; color: #99b6b9"
 top: 1
 sidebar: []
 ---
