--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ banner:
   background: "#000"
   height: "65vh"
   min_height: "65vh"
-  heading_style: "font-size: 3.5em; font-weight: bold; text-decoration: underline"
-  subheading_style: "font-size: 1.5em; color: #99b6b9"
+  heading_style: "font-family: Faculty Glyphic; font-size: 3.5em; font-weight: bold; text-decoration: underline"
+  subheading_style: "font-size: 1.5em; font-weight: bold; color: #99b6b9"
 top: 1
 sidebar: []
 ---
