--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ banner:
   height: "65vh"
   min_height: "65vh"
   heading_style: "font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline"
-  subheading_style: "font-size: 1.5em; text-align: center; color: #99b6b9"
+  subheading_style: "font-size: 1.0em; text-align: center; font-weight: bold; color: #99b6b9"
 top: 1
 sidebar: []
 ---
