--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ banner:
 top: 1
 sidebar: []
 ---
-<h1 style="font-size: 27.5px">➤ <u>Latest Posts:</u></h1>
+<h1 style="font-size: 27.5px">➤ Latest Posts:</h1>
 <hr></br>
