--- a/about.html
+++ b/about.html
@@ -7,14 +7,14 @@ title: About
 Welcome to The PS2 Homebrew Wiki! </br> 
 This website is made by members and developers of the PS2 Homebrew Scene in an attempt to make it easier for people to mod their PS2s and learn about stuff regarding the console. 
 
-<h4>Disclaimer</h4>
+<h4>➽ Disclaimer</h4>
  <div class="warning">
   <span class="closebtn" onclick="this.parentElement.style.display='none';"></span>
   This site isn't affiliated to and/or endorsed by Sony in any capacity. </br>
   This site and it's members <b>DO NOT</b> endorse piracy and any guides or information on the website assumes that the individual engaging is using their own legally obtained media only.
 </div> 
 
-<h4>Warning</h4>
+<h4>➽ Warning</h4>
  <div class="alert">
   <span class="closebtn" onclick="this.parentElement.style.display='none';"></span>
   While all information here is provided in good faith, we are in no way responsible for any damage caused to an individual/group and/or their console or other hardware by any information provided on this website. For your own safety: read twice, do once.
