--- a/get_started.html
+++ b/get_started.html
@@ -46,7 +46,7 @@ The PS2 can be classified into 2 main groups:
 <p align="center">Left: PS2 Phat | Right: PS2 Slim</p>
 Apart from this, other model groups such as the PSX-DESR, and the Sony Bravia KDL-22PX300 also exist. Since they are quite uncommon outside of certain regions, we won't cover them here.
   
-<ul><h4><a href=" "><li>➜ Getting the exact model number</li></a></h4>
+<h4><a href=" "><li>➜ Getting the exact model number</li></a></h4>
 Now that you know which group your console belongs to, we can proceed to look for it's model number.
 <ol>
   <li><strong>For Phat model consoles:</strong></li><ul>
@@ -58,7 +58,7 @@ Now that you know which group your console belongs to, we can proceed to look fo
     <li>Again, you should see `SCPH-` followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
 </ol>
 
-<ul><h4><a href=" "><li>➜ Making sense of the model number</li></a></h4>
+<h4><a href=" "><li>➜ Making sense of the model number</li></a></h4>
 Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>.
   <ul><li><strong>Prefix:</strong></li>
   Often the letters `SCPH`, denotes that the console is a PS2. Could also be `KDL` for the Bravia TV with PS2, `DESR` for PSX-DESR, `DTL` for Debug Stations/Devkits, `COH` for arcade hardware and `EB` for Prototype models.
