--- a/get_started.html
+++ b/get_started.html
@@ -50,24 +50,24 @@ Apart from this, other model groups such as the PSX-DESR, and the Sony Bravia KD
 Now that you know which group your console belongs to, we can proceed to look for it's model number.
 <ol>
   <li><strong>For Phat model consoles:</strong></li><ul>
-        <li>Look for a label that includes the text `Model No.` at the back of the console</li>
-        <li>The model number starts with `SCPH-` followed by a series of numbers. For example, "SCPH-30004R" or "SCPH-50000"</li></ul>
+        <li>Look for a label that includes the text ```Model No.``` at the back of the console</li>
+        <li>The model number starts with ```SCPH-``` followed by a series of numbers. For example, "SCPH-30004R" or "SCPH-50000"</li></ul>
     
   <li><strong>For Slim model consoles:</strong></li><ul>
     <li>Flip the console over and look for the label on the bottom</li>
-    <li>Again, you should see `SCPH-` followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
+    <li>Again, you should see ```SCPH-``` followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
 </ol>
 
 <h4><a href=" "><li>➜ Making sense of the model number</li></a></h4>
 Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>.
   <ul><li><strong>Prefix:</strong></li>
-  Often the letters `SCPH`, denotes that the console is a PS2. Could also be `KDL` for the Bravia TV with PS2, `DESR` for PSX-DESR, `DTL` for Debug Stations/Devkits, `COH` for arcade hardware and `EB` for Prototype models.
+  Often the letters ```SCPH```, denotes that the console is a PS2. Could also be ```KDL``` for the Bravia TV with PS2, ```DESR``` for PSX-DESR, ```DTL``` for Debug Stations/Devkits, ```COH``` for arcade hardware and ```EB``` for Prototype models.
   <li><strong>First two letters:</strong></li>
   Denote the chassis or motherboard revisions. For our purposes though, numbers <70XXX are Phat models and =<70XXX are Slimline models.
   <li><strong>Last two letters:</strong></li>
   Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot/FreeHDBoot</a>.
   <li><strong>Suffixes:</strong></li>
-  Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is `R` and denotes that the console has a version of DVD Player preinstalled which supports the PS2 IR Remote out of the box. Only used in "SCPH-30000R" models as non-R versions do not have this update out of the box.
+  Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is ```R``` and denotes that the console has a version of DVD Player preinstalled which supports the PS2 IR Remote out of the box. Only used in "SCPH-30000R" models as non-R versions do not have this update out of the box.
   </ul>
 </p>
 
