--- a/get_started.html
+++ b/get_started.html
@@ -61,7 +61,7 @@ Now that you know which group your console belongs to, we can proceed to look fo
 <h4><a href=" "><li>➜ Making sense of the model number</li></a></h4>
 Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>.
   <ul><li><strong>Prefix:</strong></li>
-  Often the letters <code>SCPH</code>, denotes that the console is a PS2. Could also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB<code> for Prototype models.
+  Often the letters <code>SCPH</code>, denotes that the console is a PS2. Could also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB</code> for Prototype models.
   <li><strong>First two letters:</strong></li>
   Denote the chassis or motherboard revisions. For our purposes though, numbers <70XXX are Phat models and =<70XXX are Slimline models.
   <li><strong>Last two letters:</strong></li>
