--- a/get_started.html
+++ b/get_started.html
@@ -10,20 +10,20 @@ title: Get Started
 <ol>
 <p>
   
-<h3><li>➽ Basics</li></h3>
+<a href="Basics"><h3><li>➽ Basics</li></h3></a>
 
-<ul><h4><a href=" "><li>➜ What is Homebrew?</li></a></h4>
+<ul><h4><a href="Basics-1"><li>➜ What is Homebrew?</li></a></h4></a>
 Homebrew refers to any custom or homemade software or hardware created by hobbyists, enthusiasts, or developers without official support or funding from the Original Equipment Manufacturers (OEMs).
 This term is often used in the context of homebrew games, homebrew software, or homebrew firmware for consoles (like PS2), where developers create their own programs or modify existing systems for personal use.
 
-<h4><a href=" "><li>➜ What is Jailbreaking?</li></a></h4>
+<h4><a href="Basics-2"><li>➜ What is Jailbreaking?</li></a></h4>
 Jailbreaking refers to the process of removing restrictions imposed by the manufacturer on a device to gain full control over its operating system and allow the installation of third-party applications (Homebrew) or modifications that aren't officially authorized.
 
-<h4><a href=" "><li>➜ Why should I Jailbreak my device?</li></a></h4>
+<h4><a href="Basics-3"><li>➜ Why should I Jailbreak my device?</li></a></h4>
 Jailbreaking allows you to customize the appearance of your device with new themes, custom icons and widgets.
 It also allows you to install custom software and gain access to hidden features that are not available to you otherwise (Eg: Region-free disc playback).
 
-<h4><a href=" "><li>➜ Is Jailbreaking my device legal?</li></a></h4>
+<h4><a href="Basics-4"><li>➜ Is Jailbreaking my device legal?</li></a></h4>
 Jailbreaking is legal in many countries, but it's legality can vary by region, so it's recommended you check with your local laws before proceeding. 
 All methods of jailbreaking which are provided on <a href="https://ps2wiki.github.io">this website</a> are considered legal under The U.S. Laws. 
 If you find any material which might violate the law, please raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=documentation&projects=&template=violation.yml&title=%5BVIOLATION%5D%3A+">here</a>.
@@ -31,9 +31,9 @@ If you find any material which might violate the law, please raise an issue <a h
 <hr>
 <p>
 
-<h3><li>➽ Getting started with PS2 Modding</li></h3>
+<a href"Getting-started-with-PS2-Modding"><h3><li>➽ Getting started with PS2 Modding</li></h3></a>
 
-<ul><h4><a href=" "><li>➜ Know your model</li></a></h4>
+<ul><h4><a href="Getting-started-with-PS2-Modding-1"><li>➜ Know your model</li></a></h4>
 The PS2 can be classified into 2 main groups:  
 <ol>
   <li>  The Phat (fat) models: The original, launch model</li>
@@ -46,7 +46,7 @@ The PS2 can be classified into 2 main groups:
 <p align="center">Left: PS2 Phat | Right: PS2 Slim</p>
 Apart from this, other model groups such as the PSX-DESR, and the Sony Bravia KDL-22PX300 also exist. Since they are quite uncommon outside of certain regions, we won't cover them here.
   
-<h4><a href=" "><li>➜ Getting the exact model number</li></a></h4>
+<h4><a href="Getting-started-with-PS2-Modding-2"><li>➜ Getting the exact model number</li></a></h4>
 Now that you know which group your console belongs to, we can proceed to look for it's model number.
 <ol>
   <li><strong>For Phat model consoles:</strong></li><ul>
@@ -58,7 +58,7 @@ Now that you know which group your console belongs to, we can proceed to look fo
     <li>Again, you should see <code>SCPH-</code> followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
 </ol>
 
-<h4><a href=" "><li>➜ Making sense of the model number</li></a></h4>
+<h4><a href="Getting-started-with-PS2-Modding-3"><li>➜ Making sense of the model number</li></a></h4>
 Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>.
   <ul><li><strong>Prefix:</strong></li>
   Often the letters <code>SCPH</code>, denotes that the console is a PS2. Could also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB</code> for Prototype models.
