--- a/get_started.html
+++ b/get_started.html
@@ -13,7 +13,7 @@ title: Get Started
     <!-- Basics -->
     <p><a href="#Basics"><h3><li>➽ Basics</li></h3></a><a id="Basics"><ul>
 
-        <h4><a href="#Basics-1"><li>➜ What is Homebrew?</li></a></h4></a><a id="Basics">
+        <h4><a href="#Basics-1"><li>➜ What is Homebrew?</li></a></h4></a><a id="Basics-1">
             Homebrew refers to any custom or homemade software or hardware created by hobbyists, enthusiasts, or developers without official support or funding from the Original Equipment Manufacturers (OEMs).
             This term is often used in the context of homebrew games, homebrew software, or homebrew firmware for consoles (like PS2), where developers create their own programs or modify existing systems for personal use.
         </a>
