--- a/get_started.html
+++ b/get_started.html
@@ -73,9 +73,10 @@ title: Get Started
         
         <a id="Getting-started-with-PS2-Modding-3"> </a>
         <h4><a href="#Getting-started-with-PS2-Modding-3"><li>➜ Making sense of the model number</li></a></h4>
-            Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>.
+            Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>. </br>
             <ul><li><strong>Prefix:</strong></li>
-                    Often the letters <code>SCPH</code>, denotes that the console is a PS2. Could also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB</code> for Prototype models.
+                    The most common prefix is <code>SCPH</code> and denotes that the console is a PS2. The prefix can also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB</code> for Prototype models.
+                    Further sections will cover models starting with <code>SCPH</code>.
                 <li><strong>First two letters:</strong></li>
                     Denote the chassis or motherboard revisions. For our purposes though, numbers <code><70XXX</code> are Phat models and <code>=<70XXX</code> are Slimline models.
                 <li><strong>Last two letters:</strong></li>
