--- a/get_started.html
+++ b/get_started.html
@@ -61,11 +61,11 @@ title: Get Started
         <a id="Getting-started-with-PS2-Modding-2"> </a>
         <h4><a href="#Getting-started-with-PS2-Modding-2"><li>➜ Getting the exact model number</li></a></h4>
             Now that you know which group your console belongs to, we can proceed to look for it's model number.
-            <ol>
+            <ol> </br>
                 <li><strong>For Phat model consoles:</strong></li><ul>
                     <li>Look for a label that includes the text <code>Model No.</code> at the back of the console</li>
                     <li>The model number starts with <code>SCPH-</code> followed by a series of numbers. For example, "SCPH-30004R" or "SCPH-50000"</li></ul>
-        
+                </br>
                 <li><strong>For Slim model consoles:</strong></li><ul>
                     <li>Flip the console over and look for the label on the bottom</li>
                     <li>Again, you should see <code>SCPH-</code> followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
@@ -73,14 +73,14 @@ title: Get Started
         
         <a id="Getting-started-with-PS2-Modding-3"> </a>
         <h4><a href="#Getting-started-with-PS2-Modding-3"><li>➜ Making sense of the model number</li></a></h4>
-            Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>. </br>
-            <ul><li><strong>Prefix:</strong></li>
-                    The most common prefix is <code>SCPH</code> and denotes that the console is a PS2. The prefix can also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL</code> for Debug Stations/Devkits, <code>COH</code> for arcade hardware and <code>EB</code> for Prototype models.
+            Since Sony's SKU-numbering is inconsistent sometimes, this section might not cover all different model groups, if your happens to be one of them raise an issue <a href="https://github.com/ps2wiki/ps2wiki.github.io/issues/new?assignees=koraxial&labels=factual-error&projects=&template=post-factual-error.yml&title=%5BPost+Link%5D%3A+">here</a>. 
+            </br><ul><li><strong>Prefix:</strong></li>
+                    The most common prefix is <code>SCPH</code> and denotes that the console is a PS2. The prefix can also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL-H </code> for Test Kits, <code>DTL-T </code> for Dev Kits, <code>COH-H</code> for arcade hardware and <code>EB</code> for Prototype models.
                     Further sections will cover models starting with <code>SCPH</code>.
                 <li><strong>First two letters:</strong></li>
                     Denote the chassis or motherboard revisions. For our purposes though, numbers <code><70XXX</code> are Phat models and <code>=<70XXX</code> are Slimline models.
                 <li><strong>Last two letters:</strong></li>
-                    Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot/FreeHDBoot</a>.
+                    Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot</a>/<a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeHDBoot</a>.
                 <li><strong>Suffixes:</strong></li>
                     Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is <code>R</code> and denotes that the console has a version of DVD Player preinstalled which supports the PS2 IR Remote out of the box. Only used in "SCPH-30000R" models as non-R versions do not have this update preinstalled.
             </ul>
