--- a/get_started.html
+++ b/get_started.html
@@ -77,11 +77,14 @@ title: Get Started
         </br></br>
                 <ul><li><strong>Prefix:</strong></li>
                     The most common prefix is <code>SCPH</code> and denotes that the console is a PS2. The prefix can also be <code>KDL</code>for the Bravia TV with PS2, <code>DESR</code> for PSX-DESR, <code>DTL-H</code> for Test Kits, <code>DTL-T</code> for Dev Kits, <code>COH-H</code> for arcade hardware and <code>EB</code> for Prototype models.
-                    Further sections will cover models starting with <code>SCPH</code>.
+                    Further sections will cover models starting with <code>SCPH</code>. 
+                </br>
                 <li><strong>First two letters:</strong></li>
-                    Denote the chassis or motherboard revisions. For our purposes though, knowing that numbers <code><70XXX</code> represent Phat models and <code>=<70XXX</code> represent Slimline models is enough.
+                    Denote the chassis or motherboard revisions. For our purposes though, knowing that numbers <code><70XXX</code> represent Phat models and <code>>=70XXX</code> represent Slimline models is enough.
+                </br>
                 <li><strong>Last two letters:</strong></li>
                     Denote the region the console belongs to. They are mostly irrelevant when it comes to determining the functionality of the console, but knowing your region code is handy when using/installing certain homebrew like <a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeMCBoot</a>/<a href="https://www.psx-place.com/threads/fmcb-fhdb-v1-9-series-release-thread.13413/">FreeHDBoot</a> or <a href="https://github.com/MechaResearch/MechaPwn">MechaPwn</a>.
+                </br>
                 <li><strong>Suffixes:</strong></li>
                     Can denote anything from a revision to the Color of the console to it being a Special Edition. The most common suffix is <code>R</code> and denotes that the console has a version of DVD Player preinstalled which supports the PS2 IR Remote out of the box. Only used in "SCPH-30000R" models as non-R versions do not have this update preinstalled.
             </ul>
