--- a/get_started.html
+++ b/get_started.html
@@ -48,8 +48,8 @@ title: Get Started
         <h4><a href="#Getting-started-with-PS2-Modding-1"><li>➜ Know your model</li></a></h4>
             The PS2 can be classified into 2 main groups:  
             <ol> </br>
-                <li>  The Phat (fat) models: The original, launch model</li>
-                <li>  The Slim or Slimline models: Released later and is smaller and more compact</li> 
+                <li>  <strong>The Phat (fat) models:</strong> The original, launch model</li>
+                <li>  <strong>The Slim or Slimline models:</strong> Released later and is smaller and more compact</li> 
             </ol>
             <br>
             <div class="container">
