--- a/get_started.html
+++ b/get_started.html
@@ -63,12 +63,12 @@ title: Get Started
             Now that you know which group your console belongs to, we can proceed to look for it's model number.
             <ol> </br>
                 <li><strong>For Phat model consoles:</strong></li><ul>
-                    <li>Look for a label that includes the text <code>Model No.</code> at the back of the console</li>
-                    <li>The model number starts with <code>SCPH-</code> followed by a series of numbers. For example, "SCPH-30004R" or "SCPH-50000"</li></ul>
+                    <li>Look for a label that includes the text <code>Model No.</code> at the back of the console.</li>
+                    <li>The model number starts with <code>SCPH-</code> followed by a series of numbers. For example, "SCPH-30004R" or "SCPH-50000".</li></ul>
                 </br>
                 <li><strong>For Slim model consoles:</strong></li><ul>
-                    <li>Flip the console over and look for the label on the bottom</li>
-                    <li>Again, you should see <code>SCPH-</code> followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006"</li></ul>
+                    <li>Flip the console over and look for the label on the bottom.</li>
+                    <li>Again, you should see <code>SCPH-</code> followed by a number on a sticker. For example, "SCPH-75001" or "SCPH-90006".</li></ul>
             </ol>
         
         <a id="Getting-started-with-PS2-Modding-3"> </a>
