--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
+banner: " "
 ---
 
 <h1 style="font-size: 27.5px">➤ Latest Posts</h1>
