--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
-banner: " "
+title: The PS2 Homebrew Wiki
+banner:
+  image: "/assets/images/wp2328295.jpg"
+  opacity: 0.0
+  background: "#000"
+  height: "0vh"
+  min_height: "0vh"
+  heading_style: "font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline"
+  subheading_style: "font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9"
+top: 1
+sidebar: []
 ---
 
 <h1 style="font-size: 27.5px">➤ Latest Posts</h1>
