--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@ top: 1
 sidebar: []
 ---
 
-<h1 style="color: #ffffff font-size: 27.5px">➤ Latest Posts</h1>
+<h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
 <hr></br>
