--- a/index.html
+++ b/index.html
@@ -16,5 +16,53 @@ top: 1
 sidebar: []
 ---
 
-<h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
-<hr></br>
+<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
+<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
+</br></br></br>
+
+<style>
+body {
+  background-image: url('/assets/images/ps2wiki_bg.jpg');
+}
+</style>
+
+<div style="left: 0px; position: absolute; padding: 25px; display: flex">
+
+<div style="left: 10px; right: 12.5px">
+<div style="border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: right" class="home_site_guide">
+  <h1 style="font-size: 27.5px; color: #ffffff">➤ Site Guide</h1>
+  <hr></br>
+  <h3><a href="https://ps2wiki.github.io/about.html">➽ About</a></h3>
+  Introduction to the site
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/get_started.html">➽ Get Started</a></h3>
+  Everything you need to 'Get Started' with PS2 Modding! (>ᴗ•)
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/links_and_sources.html">➽ Links & Sources</a></h3>
+  Useful links to downloads and other resources
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/categories.html">➽ Topics</a></h3>
+  All post content on the site, sorted by topics
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/tags.html">➽ Tags</a></h3>
+  Filter content based on #tags
+  </br></br><hr></br>
+  <h3><a href="https://ps2wiki.github.io/archives.html">➽ Archives</a></h3>
+  Yearly site-wide Archive
+  </br></br><hr></br>
+</div></div>
+
+<div style="padding: 6.25px"></div>
+ 
+<div style="width: 70%; left: 12.5px; right: 0px; border-radius: 10px; padding: 30px; border: 3px outset #ffffff; background-color: #0c1516; align: left" class="home_latest_posts">
+   <h1 style="font-size: 27.5px; color: #ffffff">➤ Latest Posts</h1>
+  <hr></br>
+  <div class="articles">
+  {% if page.banner == nil %}
+    {% assign banner = page.title %}
+  {% endif %}
+
+  {{ content }}
+  {% include views/pagination.html %}
+</div></div>
+</div>
